nav bar overflow issue fix and responsive added

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 .App {
   text-align: center;
-  height: 90vh;
+  height: 100vh;
   width: auto;
   display: flex;
   flex-direction: column;
+  background-color: black;
+  color: white;
 }
 
 nav {
@@ -12,6 +14,8 @@ nav {
   color: white;
   align-items: baseline;
   justify-content: space-between;
+  padding: 0 10px;
+  position: sticky;
 }
 
 .question {
@@ -21,7 +25,7 @@ nav {
   margin: auto;
   /* background: yellow; */
   width: 50%;
-  height: auto;
+  height: 100%;
 }
 
 .quiz-container {
@@ -29,6 +33,7 @@ nav {
   flex-direction: column;
   justify-content: center;
   height: 85vh;
+  overflow: auto;
 }
 
 .option {
@@ -42,6 +47,7 @@ nav {
   /* border-radius: 50px; */
   cursor: pointer;
   background-color: #e5e5e580;
+  font-weight: 600;
 }
 
 .option p:hover {
@@ -62,7 +68,7 @@ nav {
 }
 
 .question button {
-  width: fit-content;
+  width: 100%;
   /* border-radius: 50px; */
   padding: 10px 25px;
   font-size: 17px;
@@ -83,14 +89,18 @@ nav {
 .result-page {
   display: flex;
   flex-direction: column;
-  border: 2px solid black;
+  border: 1px solid gray;
+  border-radius: 5px;
   padding: 10px;
   margin: auto;
   width: 50%;
+  text-align: initial;
+  padding-top: 20px;
 }
 
 .result-container {
   height: 90vh;
+  display: flex;
 }
 
 .btn {
@@ -106,7 +116,7 @@ nav {
 }
 
 .total-question {
-  color: black;
+  color: white;
   font-weight: 700;
 }
 
@@ -140,5 +150,68 @@ nav {
 }
 
 .try-again {
-  width: 47vw;
+  width: 45vw;
+}
+
+.answer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* border: 2px solid; */
+  padding: 20px;
+}
+
+.landing-page {
+  margin: auto;
+  /* background: blueviolet; */
+  color: white;
+  font-weight: 700;
+}
+
+.landing-page h1 {
+  font-size: 35px;
+  font-weight: 600;
+}
+
+.start-btn {
+  background: white;
+  color: black;
+}
+
+.full-height {
+  height: fit-content;
+}
+
+/* .next-btn {
+  width: 100%;
+} */
+
+@media only screen and (min-width: 320px) and (max-width: 450px) {
+  .question {
+    width: 100%;
+  }
+
+  .question h4 {
+    padding-left: 15px;
+    font-weight: 700;
+    font-size: 16px;
+  }
+
+  .option p {
+    padding: 10px;
+    cursor: pointer;
+    background-color: #e5e5e580;
+    font-weight: 600;
+    font-size: 13px;
+  }
+
+  .result-page {
+    width: 100%;
+    border: none;
+    padding: 20px;
+  }
+
+  .btn {
+    font-size: 14px;
+  }
 }
